# show-me-id

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
scripts/: docker-entrypoint.sh
smid/: __main__.py  config.py
smid/dto/: exceptions.py  message.py  original.py
smid/dto/entity/: public.py  user.py
smid/render/: exceptions.py  render.py  types.py
smid/templates/: user.html
src/: __main__.py  config.py
src/dto/: message.py  original.py
src/exceptions/: __init__.py  exceptions.py
src/render/: render.py
src/templates/: public_entity.html  start.html
src/types/: __init__.py  original.py  types.py
src/types/entity/: public.py  user.py
src/utils/: __init__.py  dto_creator.py  render.py
