[tool.poetry]
name = "show-me-id"
version = "0.1.0"
description = "simple bot for demonstration Telegram ID"
authors = ["Timur Valiev <cptchunk@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
aiogram = "==3.11.0"
jinja2 = "==3.1.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
