[tool.poetry]
name = "show-me-id"
version = "0.1.0"
description = "simple bot for demonstration Telegram ID"
license = "MIT"
readme = "README.md"

authors = [
    "Timur Valiev <cptchunk@yandex.ru>"
]

[tool.poetry.dependencies]
python = "3.12.*"
aiogram = "==3.11.0"
jinja2 = "==3.1.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
nitpick = "^0.35.0"

[tool.poetry.group.lint.dependencies]
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/imtoopunkforyou/python-styles/dev/styles/imtoopunkforyou.toml"
