[project]
name = "show-me-id"
version = "0.1.0"
description = "simple bot for demonstration Telegram ID"
authors = [{ name = "Timur Valiev", email = "cptchunk@yandex.ru" }]
requires-python = "==3.12.5"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiogram==3.11.0",
    "jinja2==3.1.4",
]

[dependency-groups]
dev = [
    "ipython>=8.26.0,<9",
    "nitpick>=0.35.0,<0.36",
]
lint = [
    "wemake-python-styleguide>=0.19.2,<0.20",
    "mypy>=1.11.2,<2",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "lint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.nitpick]
style = "https://raw.githubusercontent.com/imtoopunkforyou/itpfy-style/refs/heads/main/py/imtoopunkforyou.toml"
